# Hexafalls

./: README.md
craftsmen-marketplace-backend/: .gitignore  README.md  craftsmen_marketplace.db  debug_ai_service.py  main.py  pyproject.toml  railway.toml  requirements.txt  start_server.bat  test_ai_endpoint.py  test_backend.py  test_env_gemini.py  test_gemini_instagram_components.py  test_google_cloud.py  test_instagram_gemini.py
craftsmen-marketplace-backend/api/: index.py
craftsmen-marketplace-backend/app/: __init__.py
craftsmen-marketplace-backend/app/api/: ai.py  automation.py  native_products.py  native_products_compat.py  native_speech.py  orders.py  products.py  speech.py
craftsmen-marketplace-backend/app/core/: config.py  database.py
craftsmen-marketplace-backend/app/models/: models.py
craftsmen-marketplace-backend/app/schemas/: schemas.py
craftsmen-marketplace-backend/app/services/: ai_service.py  google_ai_agent.py  instagram_gemini_service.py  instagram_service.py  instagram_service_new.py  social_media_automation.py  social_media_service.py  speech_service.py
craftsmen-marketplace-backend/test_debugging_files/: quick_login_test.py  test_ai_pipeline.py  test_complete_flow.py  test_complete_workflow.py  test_env_check.py  test_exact_frontend.py  test_flutter_flow.py  test_frontend_integration.py  test_gemini_direct.py  test_instagram_posting.py  test_instagram_service.py
frontend/: .gitignore  CONNECTION_GUIDE.md  FRONTEND_README.md  SPEECH_TROUBLESHOOTING.md  pubspec.yaml  start_app.bat  start_app_with_backend.bat
frontend/lib/: main.dart
(+6 files in other folders)
